samples/_failures_safe/1761273157_dbb6aa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_23424f0f.c: In function ‘main’:
./samples/SAFE/__tmp_23424f0f.c:149:16: error: missing terminating " character
  149 |         printf("Error
      |                ^~~~~~
./samples/SAFE/__tmp_23424f0f.c:149:9: error: expected expression at end of input
  149 |         printf("Error
      |         ^~~~~~
./samples/SAFE/__tmp_23424f0f.c:149:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_23424f0f.c:149:9: error: expected declaration or statement at end of input
